--- a/contact/index.html
+++ b/contact/index.html
@@ -15,93 +15,33 @@
   /* RESET & BASE */
   *{margin:0;padding:0;box-sizing:border-box;}
   html{scroll-behavior:smooth;}
-  body{font-family:'Poppins',sans-serif;color:#fff;background:#0d0d0d;overflow-x:hidden;line-height:1.5;text-align:left;position:relative;}
+  body{font-family:'Poppins',sans-serif;color:#fff;background:#0d0d0d;overflow-x:hidden;line-height:1.6;text-align:center;}
 
   /* HEADER */
-  header{
-    padding:12px 20px;
-    display:flex;
-    justify-content:center;
-    align-items:center;
-    background:#000;
-    position:relative;
-    z-index:1000;
-  }
-  .logo{
-    font-family:'Dancing Script',cursive;
-    font-size:2.8rem;
-    color:#fff;
-    text-align:center;
-    flex:none;
-  }
+  header{padding:15px 20px;display:flex;flex-direction:column;align-items:center;background:#000;position:relative;}
+  .header-logo{margin-bottom:10px;}
+  .logo{font-family:'Dancing Script',cursive;font-size:2.2rem;color:#fff;text-align:center;}
 
-  /* HAMBURGER MENU */
-  #hamburger{
-    position:absolute;
-    right:20px;
-    top:50%;
-    transform:translateY(-50%);
-    width:25px;
-    height:20px;
-    display:flex;
-    flex-direction:column;
-    justify-content:space-between;
-    cursor:pointer;
-    z-index:1100;
-  }
-  #hamburger span{
-    display:block;
-    height:3px;
-    background:#fff;
-    border-radius:2px;
-    transition: all 0.4s ease-in-out;
-    transform-origin: center;
-  }
+  /* HAMBURGER */
+  #hamburger{position:absolute;top:20px;right:20px;width:25px;height:20px;display:flex;flex-direction:column;justify-content:space-between;cursor:pointer;z-index:1001;}
+  #hamburger span{height:3px;background:#fff;border-radius:2px;transition: all 0.4s ease;}
   #hamburger.active span:nth-child(1){transform:rotate(45deg) translate(5px,5px);}
-  #hamburger.active span:nth-child(2){opacity:0; transform:scaleX(0);}
+  #hamburger.active span:nth-child(2){opacity:0;}
   #hamburger.active span:nth-child(3){transform:rotate(-45deg) translate(5px,-5px);}
 
   /* SIDEBAR */
-  #overlay{
-    position:fixed;
-    top:0; left:0;
-    width:100%; height:100%;
-    background:rgba(0,0,0,0.5);
-    opacity:0;
-    visibility:hidden;
-    transition: opacity 0.4s ease;
-    z-index:1040;
-  }
-  #sidebar{
-    position:fixed;
-    top:0; left:-300px;
-    width:300px;
-    height:100%;
-    background:#111;
-    display:flex;
-    flex-direction:column;
-    padding-top:80px;
-    transition: transform 0.5s cubic-bezier(0.77,0,0.175,1);
-    z-index:1050;
-    transform: translateX(0);
-  }
-  #sidebar a{
-    color:#fff;
-    text-decoration:none;
-    padding:15px 25px;
-    font-weight:600;
-    border-bottom:1px solid #333;
-    transition:0.3s;
-  }
+  #overlay{position:fixed;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.5);opacity:0;visibility:hidden;transition:0.4s;z-index:1000;}
+  #overlay.show{opacity:1;visibility:visible;}
+  #sidebar{position:fixed;top:0;left:-300px;width:300px;height:100%;background:#111;display:flex;flex-direction:column;padding-top:80px;transition:0.5s;z-index:1001;}
+  #sidebar.show{transform:translateX(300px);}
+  #sidebar a{color:#fff;text-decoration:none;padding:15px 25px;font-weight:600;border-bottom:1px solid #333;transition:0.3s;}
   #sidebar a:hover{background:#fff;color:#000;}
-  #sidebar.show{transform: translateX(300px);}
-  #overlay.show{opacity:1; visibility:visible;}
 
   /* SECTIONS */
-  section{padding:30px 20px;max-width:1000px;margin:auto;}
-  .section-title{font-family:'Dancing Script',cursive;font-size:2.5rem;margin-bottom:10px;text-align:center;}
-  .section-subtitle{font-size:1.3rem;font-weight:600;margin-bottom:10px;text-align:center;}
-  .section-text{font-size:0.95rem;margin-bottom:10px;}
+  section{padding:60px 20px;max-width:1000px;margin:auto;text-align:left;}
+  .section-title{font-family:'Dancing Script',cursive;font-size:2rem;margin-bottom:10px;text-align:center;}
+  .section-subtitle{font-size:1.5rem;font-weight:600;margin-bottom:20px;text-align:center;}
+  .section-text{font-size:1rem;margin-bottom:20px;}
 
   /* FORM */
   form{max-width:500px;margin:20px auto;text-align:left;}
@@ -122,20 +62,27 @@
   .social-icons a.email:hover img{box-shadow:0 0 15px #fff; transform: scale(1.1);}
 
   /* FOOTER */
-  footer{background:#000;padding:15px;text-align:center;font-size:0.9rem;color:#ccc;}
-  footer a{color:#fff;text-decoration:none;margin:0 5px;}
+  footer{background:#000;padding:20px;text-align:center;font-size:0.9rem;color:#ccc;}
+  footer a{color:#fff;text-decoration:none;margin:0 8px;}
   footer a:hover{text-decoration:underline;}
 
-  /* RESPONSIVE */
-  @media(max-width:768px){.header-nav{display:none;}}
-  @media(max-width:600px){.section-title{font-size:2rem;}.section-subtitle{font-size:1.1rem;}.logo{font-size:2.2rem;}.social-icons img{width:35px;height:35px;}}
+  @media(max-width:600px){
+    .section-title{font-size:1.5rem;}
+    .section-subtitle{font-size:1.2rem;}
+    .logo{font-size:2rem;}
+    .social-icons img{width:35px;height:35px;}
+  }
 </style>
 </head>
 <body>
 
 <!-- HEADER -->
 <header>
-  <h1 class="logo">TribleTunes</h1>
+  <div class="header-logo">
+    <h1 class="logo">TribleTunes</h1>
+  </div>
+
+  <!-- Hamburger -->
   <div id="hamburger">
     <span></span>
     <span></span>
@@ -143,10 +90,8 @@
   </div>
 </header>
 
-<!-- OVERLAY -->
+<!-- Sidebar & Overlay -->
 <div id="overlay"></div>
-
-<!-- SIDEBAR -->
 <div id="sidebar">
   <a href="/index.html">Home</a>
   <a href="/about/">About Us</a>
@@ -158,9 +103,8 @@
 <section id="contact">
   <h2 class="section-title">Get in Touch</h2>
   <h3 class="section-subtitle">We’d love to hear from you!</h3>
-  <p class="section-text">Have questions, suggestions, or want to collaborate? Reach out to us via email or through our social channels below:</p>
+  <p class="section-text">Have questions, suggestions, or want to collaborate? Reach out via email or social channels below:</p>
 
-  <!-- Contact Form -->
   <form action="https://formspree.io/f/xzzjejde" method="POST">
     <input type="text" name="name" placeholder="Your Name" required>
     <input type="email" name="email" placeholder="Your Email" required>
@@ -168,29 +112,45 @@
     <button type="submit">Send Message</button>
   </form>
 
-  <!-- Social Icons -->
   <div class="social-icons">
-    <a class="youtube" href="https://www.youtube.com/@TribleTunes" target="_blank">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/9/9f/Youtube_Logo_2017.png" alt="YouTube">
-    </a>
-    <a class="instagram" href="https://instagram.com/TribleTune" target="_blank">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram">
-    </a>
-    <a class="facebook" href="https://facebook.com/TribleTunes" target="_blank">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/0/05/Facebook_Logo_%282019%29.png" alt="Facebook">
-    </a>
-    <a class="x" href="https://x.com/TribleTunes" target="_blank">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/2/2f/X_logo_2023.svg" alt="X">
-    </a>
-    <a class="whatsapp" href="https://whatsapp.com/channel/0029Vb6g16B8kyyWIkgqcq3l" target="_blank">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp">
-    </a>
-    <a class="email" href="mailto:contact@tribletunes.com" target="_blank">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/4/4e/Mail_%28iOS%29.svg" alt="Email">
-    </a>
+    <a class="youtube" href="https://www.youtube.com/@TribleTunes" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/9/9f/Youtube_Logo_2017.png" alt="YouTube"></a>
+    <a class="instagram" href="https://instagram.com/TribleTune" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram"></a>
+    <a class="facebook" href="https://facebook.com/TribleTunes" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/0/05/Facebook_Logo_%282019%29.png" alt="Facebook"></a>
+    <a class="x" href="https://x.com/TribleTunes" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/2/2f/X_logo_2023.svg" alt="X"></a>
+    <a class="whatsapp" href="https://whatsapp.com/channel/0029Vb6g16B8kyyWIkgqcq3l" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp"></a>
+    <a class="email" href="mailto:contact@tribletunes.com"><img src="https://upload.wikimedia.org/wikipedia/commons/4/4e/Mail_%28iOS%29.svg" alt="Email"></a>
   </div>
 </section>
 
 <!-- FOOTER -->
 <footer>
-  <p>&
+  <p>&copy; 2025 TribleTunes. All rights reserved.</p>
+  <p>
+    <a href="/index.html">Home</a> |
+    <a href="/about/">About Us</a> |
+    <a href="/contact/">Contact</a> |
+    <a href="/submission/">Submission</a>
+  </p>
+</footer>
+
+<!-- SIDEBAR SCRIPT -->
+<script>
+const hamburger = document.getElementById('hamburger');
+const sidebar = document.getElementById('sidebar');
+const overlay = document.getElementById('overlay');
+
+hamburger.addEventListener('click', () => {
+  hamburger.classList.toggle('active');
+  sidebar.classList.toggle('show');
+  overlay.classList.toggle('show');
+});
+
+overlay.addEventListener('click', () => {
+  hamburger.classList.remove('active');
+  sidebar.classList.remove('show');
+  overlay.classList.remove('show');
+});
+</script>
+
+</body>
+</html>
