--- a/about/index.html
+++ b/about/index.html
@@ -179,7 +179,7 @@
 
 <!-- SIDEBAR -->
 <div id="sidebar">
-  <a href="/index.html">Home</a>
+  <a href="/">Home</a>
   <a href="/about/">About Us</a>
   <a href="/contact/">Contact</a>
   <a href="/submission/">Submission</a>
