--- a/contact/index.html
+++ b/contact/index.html
@@ -93,7 +93,7 @@
 <!-- Sidebar & Overlay -->
 <div id="overlay"></div>
 <div id="sidebar">
-  <a href="/index.html">Home</a>
+  <a href="/">Home</a>
   <a href="/about/">About Us</a>
   <a href="/contact/">Contact</a>
   <a href="/submission/">Submission</a>
