--- a/submission/index.html
+++ b/submission/index.html
@@ -112,7 +112,7 @@ footer a:hover{text-decoration:underline;}
   </div>
   
   <nav class="header-nav">
-    <a class="nav-btn" href="/index.html">Home</a>
+    <a class="nav-btn" href="/">Home</a>
     <a class="nav-btn" href="/about/">About Us</a>
     <a class="nav-btn" href="/contact/">Contact</a>
     <a class="nav-btn" href="/submission/">Submission</a>
