--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
   </div>
   
   <nav class="header-nav">
-    <a class="nav-btn" href="/index.html">Home</a>
+    <a class="nav-btn" href="/">Home</a>
     <a class="nav-btn" href="/about/">About Us</a>
     <a class="nav-btn" href="/contact/">Contact</a>
     <a class="nav-btn" href="/submission/">Submission</a>
