--- a/contact/index.html
+++ b/contact/index.html
@@ -125,7 +125,7 @@
 <footer>
   <p>&copy; 2025 TribleTunes. All rights reserved.</p>
   <p>
-    <a href="/index.html">Home</a> |
+    <a href="/">Home</a> |
     <a href="/about/">About Us</a> |
     <a href="/contact/">Contact</a> |
     <a href="/submission/">Submission</a>
