--- a/contact/index.html
+++ b/contact/index.html
@@ -30,12 +30,44 @@
   #hamburger.active span:nth-child(3){transform:rotate(-45deg) translate(5px,-5px);}
 
   /* SIDEBAR */
-  #overlay{position:fixed;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.5);opacity:0;visibility:hidden;transition:0.4s;z-index:1000;}
-  #overlay.show{opacity:1;visibility:visible;}
-  #sidebar{position:fixed;top:0;left:-300px;width:300px;height:100%;background:#111;display:flex;flex-direction:column;padding-top:80px;transition:0.5s;z-index:1001;}
-  #sidebar.show{transform:translateX(300px);}
-  #sidebar a{color:#fff;text-decoration:none;padding:15px 25px;font-weight:600;border-bottom:1px solid #333;transition:0.3s;}
+  #overlay{
+    position:fixed;
+    top:0; left:0;
+    width:100%; height:100%;
+    background:rgba(0,0,0,0.5);
+    opacity:0;
+    visibility:hidden;
+    transition: opacity 0.4s ease;
+    z-index:1040;
+  }
+
+  #sidebar{
+    position:fixed;
+    top:0; left:-300px; /* start off screen */
+    width:300px;
+    height:100%;
+    background:#111;
+    display:flex;
+    flex-direction:column;
+    padding-top:80px;
+    transition: transform 0.5s cubic-bezier(0.77,0,0.175,1);
+    z-index:1050;
+    transform: translateX(0);
+  }
+  #sidebar a{
+    color:#fff;
+    text-decoration:none;
+    padding:15px 25px;
+    font-weight:600;
+    border-bottom:1px solid #333;
+    transition:0.3s;
+  }
   #sidebar a:hover{background:#fff;color:#000;}
+
+  #sidebar.show{
+    transform: translateX(300px); /* slide in smoothly */
+  }
+  #overlay.show{opacity:1; visibility:visible;}
 
   /* SECTIONS */
   section{padding:60px 20px;max-width:1000px;margin:auto;text-align:left;}
@@ -98,6 +130,7 @@
   <a href="/contact/">Contact</a>
   <a href="/submission/">Submission</a>
 </div>
+
 <!-- CONTACT SECTION -->
 <section id="contact">
   <h2 class="section-title">Get in Touch</h2>
