--- a/submission/index.html
+++ b/submission/index.html
@@ -289,34 +289,24 @@ footer a:hover{text-decoration:underline;}
 <!-- TRACK SUBMISSION FORM -->
 
 <section id="track-submission">
-
   <div class="form-card">
-
     <form action="https://formspree.io/f/xzzjejde" method="POST">
-
       <input type="text" name="name" placeholder="Your Name" required>
-
       <input type="email" name="email" placeholder="Your Email" required>
-
       <input type="text" name="track" placeholder="Track Title" required>
 
-      <div class="input-icon-wrapper">
-
-        <input type="url" name="tracklink" placeholder="Spotify / SoundCloud Track Link" required>
-
-     <img src="https://upload.wikimedia.org/wikipedia/commons/1/19/Spotify_logo_without_text.svg" 
-     alt="Spotify" 
-     style="position:absolute;left:10px;top:50%;transform:translateY(-50%);width:20px;height:20px;pointer-events:none;max-width:100%;">
+      <div style="position:relative; width:100%;">
+        <input type="url" name="tracklink" placeholder="Spotify / SoundCloud Track Link" required style="padding-left:35px;">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/1/19/Spotify_logo_without_text.svg" 
+             alt="Spotify" 
+             style="position:absolute; left:10px; top:50%; transform:translateY(-50%); width:20px; height:20px; pointer-events:none;">
       </div>
 
       <button type="submit">Submit Track</button>
-
     </form>
-
   </div>
-
 </section>
-
+  
 <div class="separator"></div>
 
 <!-- PAID SUBMISSION -->
