--- a/index.html
+++ b/index.html
@@ -1,253 +1,599 @@
 <!DOCTYPE html>
+
 <html lang="en">
+
 <head>
+
   <meta charset="UTF-8">
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <title>TribleTunes</title>
 
   <!-- Favicon -->
+
   <link rel="icon" href="https://ik.imagekit.io/lbmgfujrk/favicon.png" type="image/png">
 
   <!-- Social Preview / Open Graph -->
+
   <meta property="og:image" content="https://ik.imagekit.io/lbmgfujrk/preview.png">
+
   <meta property="og:title" content="TribleTunes">
+
   <meta property="og:description" content="Artist, Lyrics Videos, and amazing music content.">
+
   <meta property="og:type" content="website">
+
   <meta name="twitter:card" content="summary_large_image">
+
   <meta name="twitter:image" content="https://ik.imagekit.io/lbmgfujrk/preview.png">
 
   <!-- Google Fonts -->
+
   <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 
   <!-- Ionicons -->
+
   <script src='https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js' type="module"></script>
+
   <script src='https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js' nomodule></script>
 
   <style>
+
     /* RESET & BASE */
+
     *{margin:0;padding:0;box-sizing:border-box;}
+
     html{scroll-behavior:smooth;}
+
     body{font-family:'Poppins',sans-serif;color:#fff;background:#0d0d0d;overflow-x:hidden;line-height:1.6;text-align:center;}
 
     /* HEADER */
-    header{padding:15px 20px;display:flex;flex-direction:column;align-items:center;background:#000;}
+
+    header{padding:15px 20px;display:flex;flex-direction:column;align-items:center;background:#000;position:relative;}
+
     .header-logo{margin-bottom:10px;}
+
     .logo{font-family:'Dancing Script',cursive;font-size:2.2rem;color:#fff;text-align:center;}
-    .header-nav{display:flex;gap:10px;overflow-x:auto;-webkit-overflow-scrolling:touch;flex-wrap:nowrap;justify-content:center;}
-    .nav-btn{padding:6px 10px;border:2px solid #fff;border-radius:5px;background:none;color:#fff;font-weight:600;cursor:pointer;white-space:nowrap;flex:0 0 auto;transition:0.3s;}
-    .nav-btn:hover{background:#fff;color:#000;}
-    .header-nav::-webkit-scrollbar{display:none;}
-    .header-nav{-ms-overflow-style:none;scrollbar-width:none;}
+
+    /* HAMBURGER */
+
+    #hamburger {
+
+      position: absolute;
+
+      top: 20px;
+
+      right: 20px;
+
+      width: 25px;
+
+      height: 20px;
+
+      display: flex;
+
+      flex-direction: column;
+
+      justify-content: space-between;
+
+      cursor: pointer;
+
+      z-index: 1001;
+
+    }
+
+    #hamburger span {
+
+      height: 3px;
+
+      background: #fff;
+
+      border-radius: 2px;
+
+      transition: all 0.4s ease;
+
+    }
+
+    #hamburger.active span:nth-child(1) { transform: rotate(45deg) translate(5px,5px); }
+
+    #hamburger.active span:nth-child(2) { opacity: 0; }
+
+    #hamburger.active span:nth-child(3) { transform: rotate(-45deg) translate(5px,-5px); }
+
+    /* SIDEBAR & OVERLAY */
+
+    #overlay {
+
+      position: fixed;
+
+      top: 0; left: 0;
+
+      width: 100%; height: 100%;
+
+      background: rgba(0,0,0,0.5);
+
+      opacity: 0;
+
+      visibility: hidden;
+
+      transition: opacity 0.4s ease;
+
+      z-index: 1040;
+
+    }
+
+    #sidebar {
+
+      position: fixed;
+
+      top: 0; left: -300px;
+
+      width: 300px;
+
+      height: 100%;
+
+      background: #111;
+
+      display: flex;
+
+      flex-direction: column;
+
+      padding-top: 80px;
+
+      transition: transform 0.5s cubic-bezier(0.77,0,0.175,1);
+
+      z-index: 1050;
+
+      transform: translateX(0);
+
+    }
+
+    #sidebar a {
+
+      color: #fff;
+
+      text-decoration: none;
+
+      padding: 15px 25px;
+
+      font-weight: 600;
+
+      border-bottom: 1px solid #333;
+
+      transition: 0.3s;
+
+    }
+
+    #sidebar a:hover { background: #fff; color: #000; }
+
+    #sidebar.show { transform: translateX(300px); }
+
+    #overlay.show { opacity: 1; visibility: visible; }
 
     /* SECTIONS */
+
     section{padding:60px 20px;max-width:1000px;margin:auto;}
+
     .section-title{font-family:'Dancing Script',cursive;font-size:2rem;margin-bottom:10px;}
+
     .section-subtitle{font-size:1.5rem;font-weight:600;margin-bottom:20px;}
+
     .section-text{font-size:1rem;margin-bottom:20px;}
 
     /* BUTTONS */
+
     .cta-btn,.btn{display:inline-block;padding:10px 18px;border:2px solid #fff;border-radius:5px;background:none;color:#fff;font-weight:600;text-transform:uppercase;cursor:pointer;transition:0.3s;text-decoration:none;}
+
     .cta-btn:hover,.btn:hover{background:#fff;color:#000;}
 
     /* CAROUSEL */
+
     .carousel{position:relative;overflow:hidden;width:100%;margin:auto;}
+
     .carousel-track{display:flex;transition:transform 0.5s ease-in-out;}
+
     .carousel-item{flex:0 0 100%;box-sizing:border-box;padding:10px;}
+
     .carousel-item img{width:100%;border-radius:10px;box-shadow:0 4px 10px rgba(0,0,0,0.5);}
+
     .arrow{position:absolute;top:50%;transform:translateY(-50%);background:rgba(0,0,0,0.5);border:none;color:white;font-size:24px;cursor:pointer;padding:10px;border-radius:50%;z-index:10;}
+
     .arrow.left{left:10px;}
+
     .arrow.right{right:10px;}
 
     /* FAQ */
+
     .faq-item{margin-bottom:15px;text-align:left;}
+
     .faq-question{width:100%;padding:12px 15px;background:#111;border:none;color:#fff;font-size:1rem;font-weight:600;text-align:left;cursor:pointer;display:flex;justify-content:space-between;align-items:center;border-radius:5px;transition:0.3s;}
+
     .faq-question:hover{background:#222;}
+
     .faq-answer{max-height:0;overflow:hidden;padding:0 15px;background:#111;border-radius:0 0 5px 5px;transition:max-height 0.3s ease;color:#ccc;}
+
     .faq-question.active .arrow-icon{transform:rotate(180deg);}
 
     /* NEWSLETTER FORM */
+
     form{max-width:500px;margin:20px auto;text-align:left;}
+
     form input, form textarea{padding:10px 15px;border-radius:5px;border:2px solid #fff;background:transparent;color:#fff;font-size:1rem;outline:none;width:100%;margin-bottom:12px;}
+
     form textarea{min-height:100px;resize:vertical;}
+
     form button{width:100%;}
 
-    /* FOOTER */
-    footer{background:#000;padding:20px;text-align:center;font-size:0.9rem;color:#ccc;}
-    footer a{color:#fff;text-decoration:none;margin:0 8px;}
-    footer a:hover{text-decoration:underline;}
-
     /* RESPONSIVE */
+
     @media(max-width:600px){
+
       .section-title{font-size:1.5rem;}
+
       .section-subtitle{font-size:1.2rem;}
-      .nav-btn{font-size:0.8rem;padding:5px 8px;}
+
       .logo{font-size:2rem;}
+
     }
+
   </style>
+
 </head>
+
 <body>
 
 <!-- HEADER -->
+
 <header>
+
   <div class="header-logo">
+
     <h1 class="logo">TribleTunes</h1>
+
   </div>
-  
-  <nav class="header-nav">
-    <a class="nav-btn" href="/">Home</a>
-    <a class="nav-btn" href="/about/">About Us</a>
-    <a class="nav-btn" href="/contact/">Contact</a>
-    <a class="nav-btn" href="/submission/">Submission</a>
-  </nav>
+
+  <!-- Hamburger -->
+
+  <div id="hamburger">
+
+    <span></span>
+
+    <span></span>
+
+    <span></span>
+
+  </div>
+
 </header>
-  <!-- ABOUT -->
+
+<!-- Sidebar & Overlay -->
+
+<div id="overlay"></div>
+
+<div id="sidebar">
+
+  <a href="/">Home</a>
+
+  <a href="/about/">About Us</a>
+
+  <a href="/contact/">Contact</a>
+
+  <a href="/submission/">Submission</a>
+
+</div>
+
+<!-- ABOUT -->
+
 <section id="about">
+
   <h2 class="section-title">Lose yourself in</h2>
+
   <h3 class="section-subtitle">the Place of amazing music.</h3>
+
   <p class="section-text">
+
     TribleTunes is a space where music and imagination soar together. We create and share high-quality lyric videos, bringing your favorite songs to life with vibrant visuals. From daily releases to curated playlists, our goal is to lift every listener into a world of amazing melodies and unforgettable rhythms.
+
     <br>🎵 TribleTunes: Lose yourself in the music! 🎵
+
   </p>
+
   <button class="cta-btn" onclick="window.open('https://www.youtube.com/@Tribletunes', '_blank')">Be The Part Of Community</button>
+
 </section>
 
 <!-- RELEASES -->
+
 <section id="releases">
+
   <h2 class="section-title">Featured Releases</h2>
+
   <div class="carousel">
+
     <button class="arrow left" onclick="moveSlide('release', -1)">&#10094;</button>
+
     <div class="carousel-track" id="release-track">
-      
-      <!-- Existing Item -->
+
       <div class="carousel-item">
+
         <img src="https://ik.imagekit.io/lbmgfujrk/UniversalUpscaler_72c34279-7ddf-49c9-b18c-55a49137c2f5.jpg?updatedAt=1759111477554" alt="Back To You">
+
         <h3>Back To You</h3>
+
         <a href="https://open.spotify.com/track/54y4vQHTHW5RILsuxVgLOM?si=xvEmQiX_TLqGbNPU8UrGrQ" class="btn" target="_blank">Listen Now</a>
+
       </div>
 
-      <!-- Existing Item -->
       <div class="carousel-item">
+
         <img src="https://ik.imagekit.io/lbmgfujrk/20250919_121021.png?updatedAt=1759111510391" alt="FUMAÇA E LUZ">
+
         <h3>FUMAÇA E LUZ</h3>
+
         <a href="https://open.spotify.com/track/0AmiHSdu7zDClPlmpUrYWn?si=DWViHgvuTFCq0feFLIOimg" class="btn" target="_blank">Listen Now</a>
+
       </div>
 
-      <!-- Existing Item -->
       <div class="carousel-item">
+
         <img src="https://ik.imagekit.io/lbmgfujrk/20250827_094940.jpg" alt="808x">
+
         <h3>808x</h3>
+
         <a href="https://open.spotify.com/album/4XFxPNCPMYQrDLs7fh39zP?si=5KFOWyMyQa2X-9NJIcIwtA" class="btn" target="_blank">Listen Now</a>
+
       </div>
 
-      <!-- ✅ New Song Added -->
       <div class="carousel-item">
+
         <img src="https://ik.imagekit.io/h2tos5anh/Untitled%20design_20251001_075216_0000.jpg" alt="New Release">
+
         <h3>MONTAGEM SOMBRIA</h3>
+
         <a href="https://open.spotify.com/track/1EqYzOHriGvfHfHeYvZACJ?si=p2LOD7O3SyK5Mqvi0bd1jw" class="btn" target="_blank">Listen Now</a>
+
       </div>
 
     </div>
+
     <button class="arrow right" onclick="moveSlide('release', 1)">&#10095;</button>
+
   </div>
+
 </section>
+
 <!-- YOUTUBE -->
+
 <section id="youtube">
+
   <h2 class="section-title">YouTube Uploads</h2>
+
   <div class="carousel">
+
     <button class="arrow left" onclick="moveSlide('youtube', -1)">&#10094;</button>
+
     <div class="carousel-track" id="youtube-track">
+
       <div class="carousel-item">
+
         <img src="https://img.youtube.com/vi/t2aD0Dob6b0/hqdefault.jpg" alt="Miss Wanna Die">
+
         <h3>JUBY PHONIC – Miss Wanna Die (Lyric Video)</h3>
+
         <a href="https://youtu.be/t2aD0Dob6b0?si=gs8th9Qjqj7fqnFE" class="btn" target="_blank">Watch Now</a>
+
       </div>
+
       <div class="carousel-item">
+
         <img src="https://img.youtube.com/vi/Wg5zTt0X0j8/hqdefault.jpg" alt="Hey daddy">
+
         <h3>Dreamsoda – Hey daddy {daddy's home} (Lyric Video)</h3>
+
         <a href="https://youtu.be/Wg5zTt0X0j8?si=jg7GURkFlyJxznjy" class="btn" target="_blank">Watch Now</a>
+
       </div>
+
       <div class="carousel-item">
+
         <img src="https://img.youtube.com/vi/mw5_5nh2iHM/hqdefault.jpg" alt="All The Love">
+
         <h3>Ayra Starr - All The Love (Lyric Video)</h3>
+
         <a href="https://youtu.be/mw5_5nh2iHM?si=g3nCpS2uVo4_VvMt" class="btn" target="_blank">Watch Now</a>
+
       </div>
+
     </div>
+
     <button class="arrow right" onclick="moveSlide('youtube', 1)">&#10095;</button>
+
   </div>
+
 </section>
 
 <!-- FAQ -->
+
 <section id="faq">
+
   <h2 class="section-title">Have questions?</h2>
+
   <h3 class="section-subtitle">We've got answers.</h3>
+
   <div class="faq-item">
+
     <button class="faq-question" onclick="toggleFAQ(this)">What is TribleTunes? <span class="arrow-icon">▼</span></button>
+
     <div class="faq-answer">TribleTunes is a YouTube channel dedicated to lyric videos.</div>
+
   </div>
+
   <div class="faq-item">
+
     <button class="faq-question" onclick="toggleFAQ(this)">How often are new videos released? <span class="arrow-icon">▼</span></button>
+
     <div class="faq-answer">We release new lyric videos daily.</div>
+
   </div>
+
   <div class="faq-item">
+
     <button class="faq-question" onclick="toggleFAQ(this)">Can I request a song? <span class="arrow-icon">▼</span></button>
+
     <div class="faq-answer">Yes! Fans can suggest songs.</div>
+
   </div>
+
   <div class="faq-item">
+
     <button class="faq-question" onclick="toggleFAQ(this)">Are all videos official? <span class="arrow-icon">▼</span></button>
+
     <div class="faq-answer">All lyric videos are created officially with permissions from the artists.</div>
+
   </div>
+
   <div class="faq-item">
+
     <button class="faq-question" onclick="toggleFAQ(this)">How can I support TribleTunes? <span class="arrow-icon">▼</span></button>
+
     <div class="faq-answer">Support us by subscribing, sharing videos, and engaging with our content.</div>
+
   </div>
+
 </section>
 
 <!-- NEWSLETTER -->
+
 <section id="newsletter">
+
   <h2 class="section-title">Stay updated</h2>
+
   <h3 class="section-subtitle">with our newsletter & suggestions.</h3>
+
   <p class="section-text">Don’t miss out on new releases, special features, and behind-the-scenes updates. You can also send us your message below!</p>
 
   <form action="https://formspree.io/f/xzzjejde" method="POST">
+
     <input type="email" name="email" placeholder="Your Email" required>
+
     <textarea name="message" placeholder="Your Message (optional)"></textarea>
+
     <button type="submit" class="cta-btn">Subscribe & Send</button>
+
   </form>
+
 </section>
 
 <!-- FOOTER -->
+
 <footer>
+
   <p>&copy; 2025 TribleTunes. All rights reserved.</p>
+
   <p>
+
     <a href="https://tribletunes.com/">Home</a> |
+
     <a href="https://tribletunes.com/about/">About Us</a> |
+
     <a href="https://tribletunes.com/contact/">Contact</a> |
+
     <a href="https://tribletunes.com/submission/">Submission</a> |
+
     <a href="https://www.youtube.com/@TribleTunes" target="_blank">YouTube</a> |
+
     <a href="https://open.spotify.com/artist/2cR2Yz2b6cdPNHbjTnNsVy" target="_blank">Spotify</a> |
+
     <a href="mailto:contact@tribletunes.com">Email</a>
+
   </p>
+
 </footer>
+
 <!-- SCRIPTS -->
+
 <script>
+
   // Smooth scroll
+
   function scrollToSection(id){document.getElementById(id).scrollIntoView({behavior:'smooth'});}
 
   // Carousel
+
   let releaseIndex=0,youtubeIndex=0;
+
   function moveSlide(type,dir){
+
     const track=document.getElementById(type+'-track');
+
     const items=track.children.length;
+
     if(type==='release'){releaseIndex=(releaseIndex+dir+items)%items;track.style.transform=`translateX(-${releaseIndex*100}%)`;}
+
     if(type==='youtube'){youtubeIndex=(youtubeIndex+dir+items)%items;track.style.transform=`translateX(-${youtubeIndex*100}%)`;}
+
   }
 
   // FAQ toggle
+
   function toggleFAQ(btn){
+
     btn.classList.toggle('active');
+
     let ans=btn.nextElementSibling;
+
     if(ans.style.maxHeight){ans.style.maxHeight=null;}else{ans.style.maxHeight=ans.scrollHeight+"px";}
+
   }
+
+  // Hamburger menu
+
+  const hamburger = document.getElementById('hamburger');
+
+  const sidebar = document.getElementById('sidebar');
+
+  const overlay = document.getElementById('overlay');
+
+  hamburger.addEventListener('click', () => {
+
+    hamburger.classList.toggle('active');
+
+    sidebar.classList.toggle('show');
+
+    overlay.classList.toggle('show');
+
+  });
+
+  overlay.addEventListener('click', () => {
+
+    hamburger.classList.remove('active');
+
+    sidebar.classList.remove('show');
+
+    overlay.classList.remove('show');
+
+  });
+
+  // Close sidebar when link clicked
+
+  const sidebarLinks = sidebar.querySelectorAll('a');
+
+  sidebarLinks.forEach(link => {
+
+    link.addEventListener('click', () => {
+
+      hamburger.classList.remove('active');
+
+      sidebar.classList.remove('show');
+
+      overlay.classList.remove('show');
+
+    });
+
+  });
+
 </script>
+
 </body>
+
 </html>
