--- a/index.html
+++ b/index.html
@@ -487,29 +487,17 @@
 <!-- FOOTER -->
 
 <footer>
-
   <p>&copy; 2025 TribleTunes. All rights reserved.</p>
-
   <p>
-
-    <a href="https://tribletunes.com/">Home</a> |
-
-    <a href="https://tribletunes.com/about/">About Us</a> |
-
-    <a href="https://tribletunes.com/contact/">Contact</a> |
-
-    <a href="https://tribletunes.com/submission/">Submission</a> |
-
+    <a href="./">Home</a> |
+    <a href="./about/">About Us</a> |
+    <a href="./contact/">Contact</a> |
+    <a href="./submission/">Submission</a> |
     <a href="https://www.youtube.com/@TribleTunes" target="_blank">YouTube</a> |
-
     <a href="https://open.spotify.com/artist/2cR2Yz2b6cdPNHbjTnNsVy" target="_blank">Spotify</a> |
-
     <a href="mailto:contact@tribletunes.com">Email</a>
-
   </p>
-
 </footer>
-
 <!-- SCRIPTS -->
 
 <script>
