--- a/index.html
+++ b/index.html
@@ -223,6 +223,28 @@
     form textarea{min-height:100px;resize:vertical;}
 
     form button{width:100%;}
+    /* FOOTER */
+footer {
+  background: #000;
+  padding: 20px;
+  text-align: center;
+  font-size: 0.9rem;
+  color: #ccc;
+}
+
+footer a:link,
+footer a:visited,
+footer a:hover,
+footer a:active {
+  color: #fff;
+  text-decoration: none;
+  margin: 0 8px;
+}
+
+footer a:hover {
+  color: #ccc;
+  text-decoration: underline;
+}
 
     /* RESPONSIVE */
 
