--- a/contact/index.html
+++ b/contact/index.html
@@ -145,10 +145,10 @@
   </form>
 
   <div class="social-icons">
-    <a class="youtube" href="https://www.youtube.com/@TribleTunes" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/9/9f/Youtube_Logo_2017.png" alt="YouTube"></a>
+    <a class="youtube" href="https://www.youtube.com/@TribleTunes" target="_blank"><img src="https://ik.imagekit.io/h2tos5anh/youtube-logo-2431.png?updatedAt=1759562863816" alt="YouTube"></a>
     <a class="instagram" href="https://instagram.com/TribleTune" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram"></a>
     <a class="facebook" href="https://facebook.com/TribleTunes" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/0/05/Facebook_Logo_%282019%29.png" alt="Facebook"></a>
-    <a class="x" href="https://x.com/TribleTunes" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/2/2f/X_logo_2023.svg" alt="X"></a>
+    <a class="x" href="https://x.com/TribleTunes" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/5/53/X_logo_2023_original.svg" alt="X"></a>
     <a class="whatsapp" href="https://whatsapp.com/channel/0029Vb6g16B8kyyWIkgqcq3l" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp"></a>
     <a class="email" href="mailto:contact@tribletunes.com"><img src="https://upload.wikimedia.org/wikipedia/commons/4/4e/Mail_%28iOS%29.svg" alt="Email"></a>
   </div>
