--- a/index.html
+++ b/index.html
@@ -215,14 +215,59 @@
     .faq-question.active .arrow-icon{transform:rotate(180deg);}
 
     /* NEWSLETTER FORM */
+#newsletter {
+    background: #ffffff;  /* white background */
+    color: #000000;       /* black text */
+    padding: 60px 20px;   /* keep same spacing as other sections */
+}
 
-    form{max-width:500px;margin:20px auto;text-align:left;}
+#newsletter h2,
+#newsletter h3,
+#newsletter p {
+    color: #000000;       /* section titles and text black */
+}
 
-    form input, form textarea{padding:10px 15px;border-radius:5px;border:2px solid #fff;background:transparent;color:#fff;font-size:1rem;outline:none;width:100%;margin-bottom:12px;}
+#newsletter form {
+    max-width: 500px;
+    margin: 20px auto;
+    text-align: left;
+}
 
-    form textarea{min-height:100px;resize:vertical;}
+#newsletter input,
+#newsletter textarea {
+    padding: 10px 15px;
+    border-radius: 5px;
+    border: 2px solid #000000; /* black border */
+    background: #ffffff;        /* white input background */
+    color: #000000;             /* black text inside inputs */
+    font-size: 1rem;
+    outline: none;
+    width: 100%;
+    margin-bottom: 12px;
+}
 
-    form button{width:100%;}
+#newsletter textarea {
+    min-height: 100px;
+    resize: vertical;
+}
+
+#newsletter button {
+    width: 100%;
+    border: 2px solid #000000; /* black border */
+    background: #000000;        /* black button */
+    color: #ffffff;             /* white text on button */
+    cursor: pointer;
+    font-weight: 600;
+    text-transform: uppercase;
+    padding: 10px 18px;
+    border-radius: 5px;
+    transition: 0.3s;
+}
+
+#newsletter button:hover {
+    background: #ffffff;  /* white background on hover */
+    color: #000000;       /* black text on hover */
+}
     /* FOOTER */
 footer {
   background: #000;
