--- a/index.html
+++ b/index.html
@@ -55,7 +55,13 @@
     .header-logo{margin-bottom:10px;}
 
     .logo{font-family:'Dancing Script',cursive;font-size:2.2rem;color:#fff;text-align:center;}
-
+    
+/* ABOUT / HEADER SECTION */
+#about {
+  background-color: #ffffff; /* White background */
+  color: #000000; /* Black text */
+  padding: 60px 20px; /* Keep spacing same */
+}
     /* HAMBURGER */
 
     #hamburger {
