--- a/index.html
+++ b/index.html
@@ -56,11 +56,16 @@
 
     .logo{font-family:'Dancing Script',cursive;font-size:2.2rem;color:#fff;text-align:center;}
     
-/* ABOUT / HEADER SECTION */
-#about {
-  background-color: #ffffff; /* White background */
-  color: #000000; /* Black text */
-  padding: 60px 20px; /* Keep spacing same */
+/* About section button style */
+#about .cta-btn {
+  border: 2px solid #000; /* black border */
+  color: #000;             /* black text */
+  background: none;        /* keep background transparent */
+}
+
+#about .cta-btn:hover {
+  background: #000;        /* black background on hover */
+  color: #fff;             /* white text on hover */
 }
     /* HAMBURGER */
 
