--- a/index.html
+++ b/index.html
@@ -58,14 +58,14 @@
     
 /* About section button style */
 #about .cta-btn {
-  border: 2px solid #000; /* black border */
-  color: #000;             /* black text */
-  background: none;        /* keep background transparent */
+  border: 2px solid #fff;  /* white border */
+  color: #000;              /* black text */
+  background: #fff;         /* white background */
 }
 
 #about .cta-btn:hover {
-  background: #000;        /* black background on hover */
-  color: #fff;             /* white text on hover */
+  background: #000;         /* black on hover */
+  color: #fff;              /* keep text white on hover */
 }
     /* HAMBURGER */
 
