--- a/index.html
+++ b/index.html
@@ -56,16 +56,29 @@
 
     .logo{font-family:'Dancing Script',cursive;font-size:2.2rem;color:#fff;text-align:center;}
     
-/* About section button style */
+/* ABOUT SECTION */
+#about {
+  background-color: #ffffff; /* White background */
+  color: #000000;           /* Black text */
+  padding: 60px 20px;       /* spacing */
+}
+
+#about h2,
+#about h3,
+#about p {
+  color: #000000;           /* Black text for headings and paragraph */
+}
+
+/* About section button */
 #about .cta-btn {
-  border: 2px solid #fff;  /* white border */
-  color: #000;              /* black text */
-  background: #fff;         /* white background */
+  border: 2px solid #000000 !important;  /* Black border */
+  color: #ffffff !important;             /* White text */
+  background: #000000 !important;        /* Black background */
 }
 
 #about .cta-btn:hover {
-  background: #000;         /* black on hover */
-  color: #fff;              /* keep text white on hover */
+  background: #333333 !important;        /* Slightly lighter black on hover */
+  color: #ffffff !important;             /* Keep text white on hover */
 }
     /* HAMBURGER */
 
