--- a/index.html
+++ b/index.html
@@ -225,6 +225,36 @@
     .arrow.left{left:10px;}
 
     .arrow.right{right:10px;}
+    /* YOUTUBE UPLOADS SECTION */
+#youtube {
+  background-color: #ffffff; /* White background */
+  color: #000000;            /* Black text */
+  padding: 60px 20px;        /* Same spacing as other sections */
+}
+
+#youtube h2,
+#youtube h3,
+#youtube p {
+  color: #000000;            /* Section titles and text black */
+}
+
+#youtube .btn {
+  border: 2px solid #000000; /* Black border */
+  background: #000000;        /* Black button background */
+  color: #ffffff;             /* White button text */
+  cursor: pointer;
+  font-weight: 600;
+  text-transform: uppercase;
+  padding: 10px 18px;
+  border-radius: 5px;
+  transition: 0.3s;
+  text-decoration: none;
+}
+
+#youtube .btn:hover {
+  background: #ffffff;  /* White background on hover */
+  color: #000000;       /* Black text on hover */
+}
 
     /* FAQ */
 
