--- a/index.html
+++ b/index.html
@@ -225,6 +225,15 @@
     .arrow.left{left:10px;}
 
     .arrow.right{right:10px;}
+
+    #youtube .carousel-item img {
+  width: 100%;           /* Keep full width of the carousel item */
+  height: 180px;         /* Set a fixed height for all thumbnails */
+  object-fit: cover;     /* Ensures the image fills the area without distortion */
+  border-radius: 10px;   /* Keep rounded corners */
+  box-shadow: 0 4px 10px rgba(0,0,0,0.5);
+    }
+    
     /* YOUTUBE UPLOADS SECTION */
 #youtube {
   background-color: #ffffff; /* White background */
