--- a/index.html
+++ b/index.html
@@ -226,13 +226,21 @@
 
     .arrow.right{right:10px;}
 
-    #youtube .carousel-item img {
-  width: 100%;           /* Keep full width of the carousel item */
-  height: 180px;         /* Set a fixed height for all thumbnails */
-  object-fit: cover;     /* Ensures the image fills the area without distortion */
-  border-radius: 10px;   /* Keep rounded corners */
+    /* YOUTUBE THUMBNAILS FIX */
+#youtube .carousel-item img {
+  width: 100%;
+  height: 180px;          /* desktop height */
+  object-fit: cover;
+  border-radius: 10px;
   box-shadow: 0 4px 10px rgba(0,0,0,0.5);
-    }
+}
+
+/* Responsive for smaller screens */
+@media (max-width: 600px) {
+  #youtube .carousel-item img {
+    height: 140px;        /* shorter height on mobile */
+  }
+}
     
     /* YOUTUBE UPLOADS SECTION */
 #youtube {
