--- a/index.html
+++ b/index.html
@@ -226,13 +226,19 @@
 
     .arrow.right{right:10px;}
 
-    /* YOUTUBE THUMBNAILS FIX */
-#youtube .carousel-item img {
+    #youtube .carousel-item img {
   width: 100%;
-  height: 180px;          /* desktop height */
+  height: 200px;         /* desktop height */
   object-fit: cover;
   border-radius: 10px;
   box-shadow: 0 4px 10px rgba(0,0,0,0.5);
+}
+
+/* Mobile devices */
+@media (max-width: 600px) {
+  #youtube .carousel-item img {
+    height: 150px;       /* smaller height for mobile */
+  }
 }
 
 /* Responsive for smaller screens */
