--- a/index.html
+++ b/index.html
@@ -227,19 +227,19 @@
     .arrow.right{right:10px;}
 
     #youtube .carousel-item img {
-  width: 100%;
-  height: 470px;         /* desktop height */
-  object-fit: cover;
-  border-radius: 10px;
-  box-shadow: 0 4px 10px rgba(0,0,0,0.5);
-}
+      width: 100%;
+      height: 470px;
+      object-fit: cover;
+      border-radius: 10px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
+    }
 
-/* Mobile devices */
-@media (max-width: 600px) {
-  #youtube .carousel-item img {
-    height: 195px;   /* mobile height */
-  }
-}
+    /* Mobile devices */
+    @media (max-width: 600px) {
+      #youtube .carousel-item img {
+        height: 195px;
+      }
+    }
 
 /* Responsive for smaller screens */
 @media (max-width: 600px) {
