--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@ footer a:hover {
           </div>
         </div>
         <!-- Cursive text below card -->
-        <p class="card-caption">Swipe</p>
+        <p class="card-caption">Swipe Next</p>
       </div>
 
       <!-- CARD 2 -->
@@ -479,7 +479,7 @@ footer a:hover {
             <a href="https://open.spotify.com/track/0AmiHSdu7zDClPlmpUrYWn?si=DWViHgvuTFCq0feFLIOimg" class="btn" target="_blank">Listen Now</a>
           </div>
         </div>
-        <p class="card-caption">Swipe</p>
+        <p class="card-caption">Swipe Next</p>
       </div>
 
       <!-- CARD 3 -->
@@ -493,7 +493,7 @@ footer a:hover {
             <a href="https://open.spotify.com/album/4XFxPNCPMYQrDLs7fh39zP?si=5KFOWyMyQa2X-9NJIcIwtA" class="btn" target="_blank">Listen Now</a>
           </div>
         </div>
-        <p class="card-caption">Swipe</p>
+        <p class="card-caption">Swipe Next</p>
       </div>
 
       <!-- CARD 4 -->
@@ -507,7 +507,7 @@ footer a:hover {
             <a href="https://open.spotify.com/track/1EqYzOHriGvfHfHeYvZACJ?si=p2LOD7O3SyK5Mqvi0bd1jw" class="btn" target="_blank">Listen Now</a>
           </div>
         </div>
-        <p class="card-caption">Swipe</p>
+        <p class="card-caption">Swipe Next</p>
       </div>
 
     </div>
